MediaWiki security release

--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -138,34 +138,37 @@
 # CVE-2019-12474 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-16738 1.33.1/1.32.4/1.31.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html https://phabricator.wikimedia.org/T230402
 # TODO 1.32.5/1.31.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000238.html Asked MediaWiki (Sam Reed) if they requested CVE for incomplete fix
+# CVE-2019-19709 TODO https://phabricator.wikimedia.org/T239466 https://gerrit.wikimedia.org/r/q/Ie54f366986056c876eade0fcad6c41f70b8b8de8
+# TODO 1.33.12/1.32.6/1.31.6 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000243.html
+# TODO 1.34.0/1.33.2/1.32.6/1.30.6 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000241.html
 MediaWiki 1.33:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.33.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.33\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-16738 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000241.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.32:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.32.5'
+    secure_version: '1.32.6'
     regexp: ['\$wgVersion.*?(?P<version>1\.32\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000238.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000241.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.31:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.5'
+    secure_version: '1.31.6'
     regexp: ['\$wgVersion.*?(?P<version>1\.31\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000238.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-December/000243.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.30:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.30\.[0-9.]{1,})']
     cve: 'MediaWiki 1.30 is end of life.'
     fingerprint: detect_general
@@ -173,7 +176,7 @@ MediaWiki 1.30:
 MediaWiki 1.29:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
     cve: 'MediaWiki 1.29 is end of life.'
     fingerprint: detect_general
@@ -181,7 +184,7 @@ MediaWiki 1.29:
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
     cve: 'MediaWiki 1.28 is end of life.'
     fingerprint: detect_general
@@ -189,7 +192,7 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
     cve: 'MediaWiki 1.27 is end of life.'
     fingerprint: detect_general
@@ -197,7 +200,7 @@ MediaWiki 1.27:
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
     cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
@@ -205,7 +208,7 @@ MediaWiki 1.26:
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
     cve: 'MediaWiki 1.25 is end of life.'
     fingerprint: detect_general
@@ -213,7 +216,7 @@ MediaWiki 1.25:
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
     cve: 'MediaWiki 1.24 is end of life.'
     fingerprint: detect_general
@@ -221,7 +224,7 @@ MediaWiki 1.24:
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
     cve: 'MediaWiki 1.23 is end of life.'
     fingerprint: detect_general
@@ -229,7 +232,7 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -237,7 +240,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -245,7 +248,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20 is end of life.'
     fingerprint: detect_general
@@ -253,7 +256,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19 is end of life.'
     fingerprint: detect_general
@@ -261,7 +264,7 @@ MediaWiki 1.19:
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.1'
+    secure_version: '1.33.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18 is end of life.'
     fingerprint: detect_general
