--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2912,3 +2912,11 @@ WordPress plugin wp-maintenance:
     cve: 'https://www.wordfence.com/blog/2019/11/high-severity-vulnerability-patched-in-wp-maintenance-plugin/'  # TODO: Asked status of CVE identifier 2019-11-27
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin cookie-law-info:
+  1:
+    location: ['/wp-content/plugins/cookie-law-info/readme.txt']
+    secure_version: '1.8.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/02/improper-access-controls-in-gdpr-cookie-consent-plugin/ https://blog.nintechnet.com/wordpress-gdpr-cookie-consent-plugin-fixed-vulnerability/ https://www.bleepingcomputer.com/news/security/wordpress-cookie-consent-plugin-fixes-critical-flaw-for-700k-users/ https://threatpost.com/critical-wordpress-plugin-bug-afflicts-700k-sites/152871/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
