--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1950,12 +1950,13 @@ WordPress plugin tevolution:
     cve: 'https://cxsecurity.com/issue/WLB-2016120166'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 1.6.3.2 OVE-20160803-0004 https://sumofpwn.nl/advisory/2016/infinitewp_client_wordpress_plugin_unauthenticated_php_object_injection_vulnerability.html
 WordPress plugin iwp-client:
   1:
     location: ['/wp-content/plugins/iwp-client/readme.txt']
-    secure_version: '1.6.3.2'
+    secure_version: '1.9.4.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160803-0004 https://sumofpwn.nl/advisory/2016/infinitewp_client_wordpress_plugin_unauthenticated_php_object_injection_vulnerability.html'
+    cve: 'https://www.wordfence.com/blog/2020/01/critical-authentication-bypass-vulnerability-in-infinitewp-client-plugin/ https://threatpost.com/wordpress-bug-leaves-sites-open-to-attack/151911/'  # TODO: No CVE?
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin cms-commander-client:
