--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2946,3 +2946,11 @@ WordPress plugin popup-builder:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-10195 https://nvd.nist.gov/vuln/detail/CVE-2020-10196 https://www.wordfence.com/blog/2020/03/vulnerabilities-patched-in-popup-builder-plugin-affecting-over-100000-sites/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin users-customers-import-export-for-wp-woocommerce:
+  1:
+    location: ['/wp-content/plugins/users-customers-import-export-for-wp-woocommerce/readme.txt']
+    secure_version: '1.3.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/03/vulnerability-patched-in-import-export-wordpress-users/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
