--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2959,6 +2959,6 @@ WordPress plugin custom-registration-form-builder-with-submission-manager:
     location: ['/wp-content/plugins/custom-registration-form-builder-with-submission-manager/readme.txt']
     secure_version: '4.6.0.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-9456 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-9454 https://nvd.nist.gov/vuln/detail/CVE-2020-9455 https://nvd.nist.gov/vuln/detail/CVE-2020-9456 https://nvd.nist.gov/vuln/detail/CVE-2020-9457 https://nvd.nist.gov/vuln/detail/CVE-2020-9458 https://www.wordfence.com/blog/2020/03/multiple-vulnerabilities-patched-in-registrationmagic-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
