--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2980,3 +2980,11 @@ WordPress plugin seo-by-rank-math:
     cve: 'https://www.wordfence.com/blog/2020/03/critical-vulnerabilities-affecting-over-200000-sites-patched-in-rank-math-seo-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin free-sales-funnel-squeeze-pages-landing-page-builder-templates-make:
+  1:
+    location: ['/wp-content/plugins/free-sales-funnel-squeeze-pages-landing-page-builder-templates-make/readme.txt']
+    secure_version: '0.99'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-11508 https://www.wordfence.com/blog/2020/04/critical-vulnerabilities-in-the-wp-lead-plus-x-wordpress-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
