--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3029,3 +3029,11 @@ WordPress plugin elementor-pro:
     cve: 'https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin ultimate-elementor:
+  1:
+    location: ['/wp-content/plugins/ultimate-elementor/readme.txt']
+    secure_version: '1.24.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
