--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -95,19 +95,22 @@
 # https://drupal.org/SA-CORE-2019-007   CVE-2019-11831  8.7.1/8.6.16/7.67
 # https://drupal.org/SA-CORE-2019-008   CVE-2019-6342   8.7.5
 # https://drupal.org/SA-CORE-2020-001   TODO            8.8.4/8.7.12
+# https://drupal.org/sa-core-2020-002   CVE-2020-11022/CVE-2020-11023   8.8.6/8.7.14/7.70
+# https://drupal.org/sa-core-2020-003   TODO            7.70
+# TODO: https://www.drupal.org/sa-contrib-2020-010
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.8.4'
+    secure_version: '8.8.6'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2020-001'
+    cve: 'https://drupal.org/SA-CORE-2020-002 https://nvd.nist.gov/vuln/detail/CVE-2020-11022 https://nvd.nist.gov/vuln/detail/CVE-2020-11023'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '8.8.4'
+    secure_version: '8.8.6'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2020-001'
+    cve: 'https://drupal.org/SA-CORE-2020-002 https://nvd.nist.gov/vuln/detail/CVE-2020-11022 https://nvd.nist.gov/vuln/detail/CVE-2020-11023'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
