--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3037,3 +3037,11 @@ WordPress plugin ultimate-elementor:
     cve: 'https://www.wordfence.com/blog/2020/05/combined-attack-on-elementor-pro-and-ultimate-addons-for-elementor-puts-1-million-sites-at-risk/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin siteorigin-panels:
+  1:
+    location: ['/wp-content/plugins/siteorigin-panels/readme.txt']
+    secure_version: '2.10.16'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.bleepingcomputer.com/news/security/wordpress-plugin-bugs-can-let-hackers-take-over-almost-1m-sites/'  # TODO: CVE
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
