Added support for WordPress plugin bbpress

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3045,3 +3045,11 @@ WordPress plugin siteorigin-panels:
     cve: 'https://www.wordfence.com/blog/2020/05/vulnerabilities-patched-in-page-builder-by-siteorigin-affects-over-1-million-sites/ https://www.bleepingcomputer.com/news/security/wordpress-plugin-bugs-can-let-hackers-take-over-almost-1m-sites/'  # TODO: CVE
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin bbpress:
+  1:
+    location: ['/wp-content/plugins/bbpress/readme.txt']
+    secure_version: '2.6.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-13693 https://bbpress.org/blog/2020/05/bbpress-2-6-5-is-out/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
