--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -248,19 +248,23 @@
 # CVE-2019-20041 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/commit/b1975463dd995da19bb40d3fa0786498717e3c53
 # CVE-2019-20042 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/commit/1f7f3f1f59567e2504f0fbebd51ccf004b3ccb1d https://core.trac.wordpress.org/changeset/46894/trunk
 # CVE-2019-20043 5.3.1 https://wordpress.org/news/2019/12/wordpress-5-3-1-security-and-maintenance-release/ https://github.com/WordPress/wordpress-develop/commit/1d1d5be7aa94608c04516cac4238e8c22b93c1d9 https://core.trac.wordpress.org/changeset/46893/trunk
-# TODO 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/
+# CVE-2020-4046 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://core.trac.wordpress.org/changeset/47947 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-rpwf-hrh2-39jf
+# CVE-2020-4047 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://core.trac.wordpress.org/changeset/47948 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-8q2w-5m27-wm27 https://github.com/WordPress/wordpress-develop/commit/0977c0d6b241479ecedfe19e96be69f727c3f81f
+# CVE-2020-4048 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://core.trac.wordpress.org/changeset/47949 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-q6pw-gvf4-5fj5 https://github.com/WordPress/wordpress-develop/commit/6ef777e9a022bee2a80fa671118e7e2657e52693
+# CVE-2020-4049 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://core.trac.wordpress.org/changeset/47950 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-87h4-phjv-rm6p https://github.com/WordPress/wordpress-develop/commit/404f397b4012fd9d382e55bf7d206c1317f01148
+# CVE-2020-4050 5.4.2 https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://core.trac.wordpress.org/changeset/47951 https://github.com/WordPress/wordpress-develop/security/advisories/GHSA-4vpv-fgg2-gcqc https://github.com/WordPress/wordpress-develop/commit/b8dea76b495f0072523106c6ec46b9ea0d2a0920
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
     secure_version: '5.4.2'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/'
+    cve: 'https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2020-4046 https://nvd.nist.gov/vuln/detail/CVE-2020-4047 https://nvd.nist.gov/vuln/detail/CVE-2020-4048 https://nvd.nist.gov/vuln/detail/CVE-2020-4049 https://nvd.nist.gov/vuln/detail/CVE-2020-4050'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
     secure_version: '5.4.2'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/'
+    cve: 'https://wordpress.org/news/2020/06/wordpress-5-4-2-security-and-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2020-4046 https://nvd.nist.gov/vuln/detail/CVE-2020-4047 https://nvd.nist.gov/vuln/detail/CVE-2020-4048 https://nvd.nist.gov/vuln/detail/CVE-2020-4049 https://nvd.nist.gov/vuln/detail/CVE-2020-4050'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
