--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -97,13 +97,15 @@
 # https://drupal.org/SA-CORE-2020-001   TODO            8.8.4/8.7.12
 # https://drupal.org/sa-core-2020-002   CVE-2020-11022/CVE-2020-11023   8.8.6/8.7.14/7.70
 # https://drupal.org/sa-core-2020-003   CVE-2020-13662  7.70
-# TODO: https://www.drupal.org/sa-contrib-2020-010
+# https://drupal.org/sa-core-2020-004   CVE-2020-13663  9.0.1/8.9.1/8.8.8/7.72
+# https://drupal.org/sa-core-2020-005   CVE-2020-13664  9.0.1/8.9.1/8.8.8
+# https://drupal.org/sa-core-2020-006   CVE-2020-13665  9.0.1/8.9.1/8.8.8
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
     secure_version: '8.8.6'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2020-002 https://nvd.nist.gov/vuln/detail/CVE-2020-11022 https://nvd.nist.gov/vuln/detail/CVE-2020-11023'
+    cve: 'https://drupal.org/SA-CORE-2020-004 https://nvd.nist.gov/vuln/detail/CVE-2020-13663 https://drupal.org/SA-CORE-2020-005 https://nvd.nist.gov/vuln/detail/CVE-2020-13664 https://drupal.org/SA-CORE-2020-006 https://nvd.nist.gov/vuln/detail/CVE-2020-13665'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
@@ -111,6 +113,6 @@ Drupal 7:
     location: ['/includes/bootstrap.inc']
     secure_version: '8.8.6'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2020-002 https://nvd.nist.gov/vuln/detail/CVE-2020-11022 https://nvd.nist.gov/vuln/detail/CVE-2020-11023'
+    cve: 'https://drupal.org/SA-CORE-2020-004 https://nvd.nist.gov/vuln/detail/CVE-2020-13663 https://drupal.org/SA-CORE-2020-005 https://nvd.nist.gov/vuln/detail/CVE-2020-13664 https://drupal.org/SA-CORE-2020-006 https://nvd.nist.gov/vuln/detail/CVE-2020-13665'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
