--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3062,3 +3062,13 @@ WordPress plugin pagelayer:
     cve: 'https://www.wordfence.com/blog/2020/05/high-severity-vulnerabilities-in-pagelayer-plugin-affect-over-200000-wordpress-sites/'  # TODO: CVE
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO 1.5.6 Unauthenticated Arbitrary File Upload leading to Remote Code Execution
+# TODO 1.5.6 Unauthenticated Arbitrary File Deletion via path traversal
+WordPress plugin angwp:
+  1:
+    location: ['/wp-content/plugins/angwp/readme.txt']
+    secure_version: '1.5.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/07/critical-vulnerabilities-patched-in-adning-advertising-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
