--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3082,3 +3082,11 @@ WordPress plugin wpdiscuz:
     cve: 'https://www.wordfence.com/blog/2020/07/critical-arbitrary-file-upload-vulnerability-patched-in-wpdiscuz-plugin/ https://www.bleepingcomputer.com/news/security/critical-wordpress-plugin-bug-lets-hackers-take-over-hosting-account/ https://threatpost.com/critical-rce-flaw-wordpress-plugin-on-70k-sites/157824/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin facebook-messenger-customer-chat:
+  1:
+    location: ['/wp-content/plugins/facebook-messenger-customer-chat/readme.txt']
+    secure_version: '1.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/08/the-official-facebook-chat-plugin-created-vector-for-social-engineering-attacks/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
