--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3090,3 +3090,11 @@ WordPress plugin facebook-messenger-customer-chat:
     cve: 'https://www.wordfence.com/blog/2020/08/the-official-facebook-chat-plugin-created-vector-for-social-engineering-attacks/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin divi-builder:
+  1:
+    location: ['/wp-content/plugins/divi-builder/readme.txt']
+    secure_version: '4.5.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/08/critical-vulnerability-exposes-over-700000-sites-using-divi-extra-and-divi-builder/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
