--- a/yamls/wordpress-themes.yml
+++ b/yamls/wordpress-themes.yml
@@ -22,3 +22,19 @@ WordPress theme yellow-pencil-visual-theme-customizer:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11886 https://www.wordfence.com/blog/2019/04/zero-day-vulnerability-in-yellow-pencil-visual-theme-customizer-exploited-in-the-wild/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress theme divi:
+  1:
+    location: ['/wp-content/themes/divi/readme.txt']
+    secure_version: '4.5.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/08/critical-vulnerability-exposes-over-700000-sites-using-divi-extra-and-divi-builder/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme extra:
+  1:
+    location: ['/wp-content/themes/extra/readme.txt']
+    secure_version: '4.5.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/08/critical-vulnerability-exposes-over-700000-sites-using-divi-extra-and-divi-builder/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
