--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3093,3 +3093,11 @@ WordPress plugin divi-builder:
     cve: 'https://www.wordfence.com/blog/2020/08/critical-vulnerability-exposes-over-700000-sites-using-divi-extra-and-divi-builder/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin advanced-access-manager:
+  1:
+    location: ['/wp-content/plugins/advanced-access-manager/readme.txt']
+    secure_version: '6.6.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/08/high-severity-vulnerability-patched-in-advanced-access-manager/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
