--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3101,3 +3101,11 @@ WordPress plugin advanced-access-manager:
     cve: 'https://www.wordfence.com/blog/2020/08/high-severity-vulnerability-patched-in-advanced-access-manager/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woocommerce-gateway-nab-dp:
+  1:
+    location: ['/wp-content/plugins/woocommerce-gateway-nab-dp/readme.txt']
+    secure_version: '2.1.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-11497 https://lists.openwall.net/full-disclosure/2020/08/21/1'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
