--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3109,3 +3109,11 @@ WordPress plugin woocommerce-gateway-nab-dp:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-11497 https://lists.openwall.net/full-disclosure/2020/08/21/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-file-manager:
+  1:
+    location: ['/wp-content/plugins/wp-file-manager/readme.txt']
+    secure_version: '6.9'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/09/700000-wordpress-users-affected-by-zero-day-vulnerability-in-file-manager-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
