--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3117,3 +3117,11 @@ WordPress plugin wp-file-manager:
     cve: 'https://www.wordfence.com/blog/2020/09/700000-wordpress-users-affected-by-zero-day-vulnerability-in-file-manager-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woo-discount-rules:
+  1:
+    location: ['/wp-content/plugins/woo-discount-rules/readme.txt']
+    secure_version: '2.2.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/09/high-severity-vulnerabilities-patched-in-discount-rules-for-woocommerce/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
