--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3125,3 +3125,11 @@ WordPress plugin woo-discount-rules:
     cve: 'https://www.wordfence.com/blog/2020/09/high-severity-vulnerabilities-patched-in-discount-rules-for-woocommerce/ https://threatpost.com/woocommerce-plugin-bug-allows-site-takeover/159364/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin js_composer:
+  1:
+    location: ['/wp-content/plugins/js_composer/readme.txt']
+    secure_version: '6.4.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2020/10/vulnerability-exposes-over-4-million-sites-using-wpbakery/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested. (2020-10-08)
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
