--- a/yamls/wordpress-themes.yml
+++ b/yamls/wordpress-themes.yml
@@ -38,3 +38,123 @@ WordPress theme extra:
     cve: 'https://www.wordfence.com/blog/2020/08/critical-vulnerability-exposes-over-700000-sites-using-divi-extra-and-divi-builder/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress theme shapely:
+  1:
+    location: ['/wp-content/themes/shapely/style.css']
+    secure_version: '1.2.9'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme newsmag:
+  1:
+    location: ['/wp-content/themes/newsmag/style.css']
+    secure_version: '2.4.2'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme activello:
+  1:
+    location: ['/wp-content/themes/activello/style.css']
+    secure_version: '1.4.2'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme illdy:
+  1:
+    location: ['/wp-content/themes/illdy/style.css']
+    secure_version: '2.1.7'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme allegiant:
+  1:
+    location: ['/wp-content/themes/allegiant/style.css']
+    secure_version: '1.2.6'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme newspaper-x:
+  1:
+    location: ['/wp-content/themes/newspaper-x/style.css']
+    secure_version: '1.3.2'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme pixova-lite:
+  1:
+    location: ['/wp-content/themes/pixova-lite/style.css']
+    secure_version: '2.0.7'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme brilliance:
+  1:
+    location: ['/wp-content/themes/brilliance/style.css']
+    secure_version: '1.3.0'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme medzone-lite:
+  1:
+    location: ['/wp-content/themes/medzone-lite/style.css']
+    secure_version: '1.2.6'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme regina-lite:
+  1:
+    location: ['/wp-content/themes/regina-lite/style.css']
+    secure_version: '2.0.6'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme transcend:
+  1:
+    location: ['/wp-content/themes/transcend/style.css']
+    secure_version: '1.2.0'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme affluent:
+  1:
+    location: ['/wp-content/themes/affluent/style.css']
+    secure_version: '1.1.2'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme bonkers:
+  1:
+    location: ['/wp-content/themes/bonkers/style.css']
+    secure_version: '1.0.6'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme antreas:
+  1:
+    location: ['/wp-content/themes/antreas/style.css']
+    secure_version: '1.0.7'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress theme naturemag-lite:
+  1:
+    location: ['/wp-content/themes/naturemag-lite/style.css']
+    secure_version: 'N/A'
+    regexp: ['Version:\s*(?P<version>[0-9.]{1,})']
+    cve: 'https://wpscan.com/vulnerabilities/10417 https://blog.nintechnet.com/unauthenticated-function-injection-vulnerability-fixed-in-15-wordpress-themes/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
