--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2680,7 +2680,7 @@ WordPress plugin mapsvg-lite-interactive-vector-maps:
     location: ['/wp-content/plugins/mapsvg-lite-interactive-vector-maps/readme.txt']
     secure_version: '3.3.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://advisories.dxw.com/advisories/csrf-mapsvg-lite/'  # TODO: CVE was requested 2019-01-08 by DXW
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-1000003 https://advisories.dxw.com/advisories/csrf-mapsvg-lite/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin forminator:
