--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3130,7 +3130,7 @@ WordPress plugin js_composer:
     location: ['/wp-content/plugins/js_composer/readme.txt']
     secure_version: '6.4.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/10/vulnerability-exposes-over-4-million-sites-using-wpbakery/'  # TODO: CVE. Wordfence page says "Pending", but not sure if that has been requested. (2020-10-08)
+    cve: 'https://www.wordfence.com/blog/2020/10/vulnerability-exposes-over-4-million-sites-using-wpbakery/'  # TODO: CVE. Wordfence page says "Pending" (2020-10-08). Requested 2020-11-14.
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin ti-woocommerce-wishlist:
