--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -3146,6 +3146,6 @@ WordPress plugin orbisius-child-theme-creator:
     location: ['/wp-content/plugins/orbisius-child-theme-creator/readme.txt']
     secure_version: '1.5.2'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2020/10/high-severity-vulnerability-patched-in-child-theme-creator-by-orbisius/'  # TODO: CVE. Wordfence page says "Pending" (2020-10-18). Requested CVE 2020-11-14 #987750
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2020-28649 https://www.wordfence.com/blog/2020/10/high-severity-vulnerability-patched-in-child-theme-creator-by-orbisius/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
